--- a/index.html
+++ b/index.html
@@ -52,25 +52,25 @@
         <!-- Current Campaigns Section -->
         <h2>Current Campaigns</h2>
         <div class="gallery">
-            <img src="https://drive.google.com/uc?id=1YsrHbwmpELzSVHWjZVf0oAJR3tx3bhaE" alt="Current Campaigns QR Code 1">
-            <img src="https://drive.google.com/uc?id=1Ytq5DgrfZ7E1EQQzVHNMPsHfXSi4Rj1z" alt="Current Campaigns QR Code 2">
-            <img src="https://drive.google.com/uc?id=1YwCiWL_RJ1W-BeYLdRgnLqs0wb3481Ob" alt="Current Campaigns QR Code 3">
+            <img src="https://raw.githubusercontent.com/angelrodriquez/gallery/main/qr1.png" alt="Current Campaigns QR Code 1">
+            <img src="https://raw.githubusercontent.com/angelrodriquez/gallery/main/qr2.png" alt="Current Campaigns QR Code 2">
+            <img src="https://raw.githubusercontent.com/angelrodriquez/gallery/main/qr3.png" alt="Current Campaigns QR Code 3">
         </div>
 
         <!-- Customer Service Section -->
         <h2>Customer Service</h2>
         <div class="gallery">
-            <img src="https://drive.google.com/uc?id=1ZIehNNwjP3sxpRxc9GuSa6hm2AnJHZBJ" alt="Customer Service QR Code 1">
-            <img src="https://drive.google.com/uc?id=1ZOpQV_oArSGMukSZNQCwZiqyCwRvJjzp" alt="Customer Service QR Code 2">
-            <img src="https://drive.google.com/uc?id=1ZPIhttdxMGgRIkPPvMkPRST6eIDz33Ge" alt="Customer Service QR Code 3">
+            <img src="https://raw.githubusercontent.com/angelrodriquez/gallery/main/qr1.png" alt="Customer Service QR Code 1">
+            <img src="https://raw.githubusercontent.com/angelrodriquez/gallery/main/qr2.png" alt="Customer Service QR Code 2">
+            <img src="https://raw.githubusercontent.com/angelrodriquez/gallery/main/qr3.png" alt="Customer Service QR Code 3">
         </div>
 
         <!-- Spark Code Submissions Section -->
         <h2>Spark Code Submissions</h2>
         <div class="gallery">
-            <img src="https://drive.google.com/uc?id=1ZYHeB2FXqn4oqvDdhW6Wi6Xlji5X6VRz" alt="Spark Code Submissions QR Code 1">
-            <img src="https://drive.google.com/uc?id=1ZQSDGcMgUFuFEUb0BsfNDOunhlR1lP8b" alt="Spark Code Submissions QR Code 2">
-            <img src="https://drive.google.com/uc?id=1ZSXKK1Ki1aArgnFai3aFCOt2fs9UB1Ds" alt="Spark Code Submissions QR Code 3">
+            <img src="https://raw.githubusercontent.com/angelrodriquez/gallery/main/qr1.png" alt="Spark Code Submissions QR Code 1">
+            <img src="https://raw.githubusercontent.com/angelrodriquez/gallery/main/qr2.png" alt="Spark Code Submissions QR Code 2">
+            <img src="https://raw.githubusercontent.com/angelrodriquez/gallery/main/qr3.png" alt="Spark Code Submissions QR Code 3">
         </div>
     </div>
 </body>
